--- a/advanced.html
+++ b/advanced.html
@@ -8,6 +8,7 @@
     <title>Advanced Search</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="advanced.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
 </head>
 
 <body>
